app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: "C:\\Users\\predator\\Desktop\\kubrnet wprss\\kompose-windows-amd64.exe convert"
    kompose.version: "1.28.0 (c4137012e)"
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: "C:\\Users\\predator\\Desktop\\kubrnet wprss\\kompose-windows-amd64.exe convert"
        kompose.version: "1.28.0 (c4137012e)"
      labels:
        io.kompose.network/project-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - image: app
          name: app
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.5"
              memory: "512Mi"
          volumeMounts:
            - mountPath: /var/www/html
              name: app-claim0
      restartPolicy: Always
      volumes:
        - name: app-claim0
          persistentVolumeClaim:
            claimName: app-claim0
status: {}
