project-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/project-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/project-default: "true"
